--- a/azure.yaml
+++ b/azure.yaml
@@ -1,3 +1,3 @@
-name: postgres-extension-demo
+name: documentdb-extension-demo
 metadata:
-  template: postgres-extension-demo@0.0.2-beta
+  template: documentdb-extension-demo@0.0.1-beta
