--- a/data/healthcare/appointments.json
+++ b/data/healthcare/appointments.json
@@ -3,42 +3,42 @@
     "appointmentId": "APT001",
     "patientId": "P10001",
     "doctorId": "DOC001",
-    "doctorName": "Dr. Sarah Wilson",
+    "doctorName": "Dr. Emily Martinez",
     "specialty": "Cardiology",
     "appointmentDate": "2024-02-15T10:00:00Z",
     "duration": 30,
     "status": "Scheduled",
     "type": "Follow-up",
     "notes": "Annual checkup, review blood pressure medication",
-    "location": "Main Clinic - Room 201",
+    "location": "Riverside Medical Center - Room 201",
     "createdAt": "2024-01-20T09:00:00Z"
   },
   {
     "appointmentId": "APT002",
     "patientId": "P10002",
     "doctorId": "DOC002",
-    "doctorName": "Dr. James Chen",
+    "doctorName": "Dr. Michael Johnson",
     "specialty": "Psychiatry",
     "appointmentDate": "2024-02-16T14:30:00Z",
     "duration": 45,
     "status": "Scheduled",
     "type": "Consultation",
     "notes": "Initial consultation for anxiety management",
-    "location": "Mental Health Center - Room 105",
+    "location": "Wellness Institute - Room 105",
     "createdAt": "2024-01-21T11:15:00Z"
   },
   {
     "appointmentId": "APT003",
     "patientId": "P10003",
     "doctorId": "DOC003",
-    "doctorName": "Dr. Maria Rodriguez",
+    "doctorName": "Dr. Jennifer Williams",
     "specialty": "Internal Medicine",
     "appointmentDate": "2024-02-14T08:00:00Z",
     "duration": 20,
     "status": "Completed",
     "type": "Physical",
     "notes": "Annual physical exam, cholesterol screening",
-    "location": "Main Clinic - Room 102",
+    "location": "Riverside Medical Center - Room 102",
     "createdAt": "2024-01-19T15:30:00Z",
     "completedAt": "2024-02-14T08:20:00Z"
   },
@@ -46,70 +46,70 @@
     "appointmentId": "APT004",
     "patientId": "P10004",
     "doctorId": "DOC004",
-    "doctorName": "Dr. Robert Thompson",
+    "doctorName": "Dr. Christopher Davis",
     "specialty": "Pulmonology",
     "appointmentDate": "2024-02-17T11:00:00Z",
     "duration": 40,
     "status": "Scheduled",
     "type": "Follow-up",
     "notes": "Asthma management review, adjust inhaler dosage",
-    "location": "Specialty Clinic - Room 301",
+    "location": "Advanced Care Center - Room 301",
     "createdAt": "2024-01-22T13:45:00Z"
   },
   {
     "appointmentId": "APT005",
     "patientId": "P10005",
     "doctorId": "DOC005",
-    "doctorName": "Dr. Lisa Park",
+    "doctorName": "Dr. Amanda Foster",
     "specialty": "Gastroenterology",
     "appointmentDate": "2024-02-18T09:30:00Z",
     "duration": 60,
     "status": "Scheduled",
     "type": "Procedure",
     "notes": "Endoscopy procedure, fasting required",
-    "location": "Surgical Center - Room 401",
+    "location": "Surgical Excellence Center - Room 401",
     "createdAt": "2024-01-23T10:20:00Z"
   },
   {
     "appointmentId": "APT006",
     "patientId": "P10001",
     "doctorId": "DOC006",
-    "doctorName": "Dr. David Miller",
+    "doctorName": "Dr. Rachel Green",
     "specialty": "Dermatology",
     "appointmentDate": "2024-02-20T15:00:00Z",
     "duration": 25,
     "status": "Scheduled",
     "type": "Consultation",
     "notes": "Skin rash evaluation",
-    "location": "Dermatology Clinic - Room 205",
+    "location": "Skin Health Center - Room 205",
     "createdAt": "2024-01-24T16:10:00Z"
   },
   {
     "appointmentId": "APT007",
     "patientId": "P10002",
     "doctorId": "DOC002",
-    "doctorName": "Dr. James Chen",
+    "doctorName": "Dr. Michael Johnson",
     "specialty": "Psychiatry",
     "appointmentDate": "2024-02-23T13:00:00Z",
     "duration": 45,
     "status": "Scheduled",
     "type": "Follow-up",
     "notes": "Medication adjustment follow-up",
-    "location": "Mental Health Center - Room 105",
+    "location": "Wellness Institute - Room 105",
     "createdAt": "2024-01-25T12:30:00Z"
   },
   {
     "appointmentId": "APT008",
     "patientId": "P10003",
     "doctorId": "DOC007",
-    "doctorName": "Dr. Amanda Foster",
+    "doctorName": "Dr. Sarah Chen",
     "specialty": "Orthopedics",
     "appointmentDate": "2024-02-25T10:30:00Z",
     "duration": 35,
     "status": "Scheduled",
     "type": "Consultation",
     "notes": "Knee pain evaluation",
-    "location": "Orthopedic Clinic - Room 108",
+    "location": "Joint & Spine Center - Room 108",
     "createdAt": "2024-01-26T14:15:00Z"
   }
 ]
